--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
     <p>Recommended:</p>
     <ul>
-      <li>familiar with the click-and-point interface of libraries like scikit-image, simpleITK and pydicom&lt;/div&gt;&lt;/div&gt;</li>
+      <li>familiarity with the libraries like scikit-image&lt;/div&gt;&lt;/div&gt;</li>
     </ul>
 
     <p id="where">
